docs: Update hardening status, packaging, and ADR-0002; add Spanish README; refine UI controllers and themes.